fix for alignment weirdness

--- a/app/styles/timeline.css
+++ b/app/styles/timeline.css
@@ -4,7 +4,7 @@
   color: white;
   flex-wrap: nowrap;
   align-items: stretch;
-  margin-left:auto;
+  margin-left:10vw;
   margin-right: auto;
 }
 
